Basic layout elements added, blank for now
Header, navigation, sidebar, content and footer all added and in place.
No styling yet.

--- a/index.html
+++ b/index.html
@@ -31,17 +31,30 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="twelve.columns">
-        <!--Start here-->
-      </div>
-      <div class="one-half column" style="margin-top: 25%">
+  <div class="container"><!--Container for ALL content, everything inside this-->
+    <div class="row"><!--New row-->
+      <!--Header begin--><div class="twelve columns dye">
+        <h1 id="header-title">St. Andrew's Church</h1>
+      </div><!--Header ends-->
+      <!--Navigation begin--><div class="twelve columns dye">
+        Home
+      </div><!--Navigation ends-->
+    </div><!--Row ends-->
+    <div class="row"><!--New row-->
+      <!--Side navigation begin--><div class="four columns dye">
+        History
+      </div><!--Side navigation ends-->
+      <div class="eight columns dye"><!--Content begins-->
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
-  </div>
+      </div><!--Content ends-->
+    </div><!--Row ends-->
+    <div class="row"><!--New row-->
+      <div class="twelve columns dye"><!--Footer begins-->
+        Footer
+      </div><!--Footer ends-->
+    </div><!--Row ends-->
+  </div><!--Container ends-->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
