--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container"><!--Container for ALL content, everything inside this-->
     <div class="row"><!--New row-->
-      <!--Header begin--><div class="twelve columns dye">
+      <!--Header begin--><div class="twelve columns dye" id="header">
         <h1 id="header-title">St. Andrew's Church</h1>
+
+        <div id="nav"><!--Navigation begin--> <!--Embedded in header so image flows
+          behind it-->
+          <ul>
+            <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
+          </ul>
+        </div><!--Navigation ends-->
       </div><!--Header ends-->
-      <!--Navigation begin--><div class="twelve columns dye">
-        Home
-      </div><!--Navigation ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
       <!--Side navigation begin--><div class="four columns dye">
@@ -50,8 +54,9 @@
       </div><!--Content ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
-      <div class="twelve columns dye"><!--Footer begins-->
-        Footer
+      <div class="twelve columns dye" id="footer"><!--Footer begins-->
+        <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
+        <img src="facebook" />
       </div><!--Footer ends-->
     </div><!--Row ends-->
   </div><!--Container ends-->
