--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </div><!--Header ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
-      <!--Side navigation begin--><div class="four columns dye">
+      <!--Side navigation begin--><div class="four columns" id="sidebar">
         History
       </div><!--Side navigation ends-->
-      <div class="eight columns dye"><!--Content begins-->
+      <div class="eight columns nomargin"><!--Content begins-->
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div><!--Content ends-->
