Header added and mobile breakpoints and new stylesheet
Moved changes from skeleton into style, then proceeded to add header
and additional breakpoint code as needed, different size headers added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/normalize.css"><!-- reset file do not change -->
+  <link rel="stylesheet" href="css/skeleton.css"><!-- framework CSS -->
+  <link rel="stylesheet" href="css/style.css"><!--my additions-->
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,7 +34,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container"><!--Container for ALL content, everything inside this-->
     <div class="row"><!--New row-->
-      <!--Header begin--><div class="twelve columns dye" id="header">
+      <!--Header begin--><div class="twelve columns" id="header">
         <h1 id="header-title">St. Andrew's Church</h1>
 
         <div id="nav"><!--Navigation begin--> <!--Embedded in header so image flows
