Further layout sorting
Got sidebar, content, navigation pretty much sorted

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 
         <div id="nav"><!--Navigation begin--> <!--Embedded in header so image flows
           behind it-->
-          <ul>
-            <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
-          </ul>
+          <div id="navbox">
+            <ul>
+              <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
+            </ul>
+          </div>
         </div><!--Navigation ends-->
       </div><!--Header ends-->
     </div><!--Row ends-->
@@ -49,13 +51,13 @@
       <!--Side navigation begin--><div class="four columns" id="sidebar">
         History
       </div><!--Side navigation ends-->
-      <div class="eight columns nomargin"><!--Content begins-->
+      <div class="eight columns nomargin" id="content"><!--Content begins-->
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div><!--Content ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
-      <div class="twelve columns dye" id="footer"><!--Footer begins-->
+      <div class="twelve columns" id="footer"><!--Footer begins-->
         <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
         <img src="facebook" />
       </div><!--Footer ends-->
