Navigation fixing progress
Working around issues to get it centred and nicely laid out on all
breakpoints, almost done

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <div class="row"><!--New row-->
       <!--Header begin--><div class="twelve columns" id="header">
         <h1 id="header-title">St. Andrew's Church</h1>
-
-        <div id="nav"><!--Navigation begin--> <!--Embedded in header so image flows
-          behind it-->
-          <div id="navbox">
-            <ul>
-              <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
-            </ul>
-          </div>
-        </div><!--Navigation ends-->
       </div><!--Header ends-->
+    </div><!--Row ends-->
+    <div id="row"><!--Row begins-->
+      <div id="nav"><!--Navigation begin-->
+        <div class="centre"><!-- Centre class begin-->
+          <ul>
+            <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
+          </ul>
+        </div><!--Centre class end-->
+      </div><!--Navigation ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
       <!--Side navigation begin--><div class="four columns" id="sidebar">
