Navigation and header basics sorted
Added fonts, sorted layouts etc to make everything close enough to the
mockup for now

--- a/index.html
+++ b/index.html
@@ -39,17 +39,23 @@
       </div><!--Header ends-->
     </div><!--Row ends-->
     <div id="row"><!--Row begins-->
-      <div id="nav"><!--Navigation begin-->
+      <div class="twelve columns" id="nav"><!--Navigation begin-->
+        <div class="seven columns">
+          <p id="left">In the Anglican Diocese of Chichester, and Worthing Deanery</p>
+        </div>
+        <div class="five columns">
+          <p id="right">Church Lane, Ferring, West Sussex, BN12 5HN</p>
+        </div>
         <div class="centre"><!-- Centre class begin-->
           <ul>
-            <li>Home</li><li>Page</li><li>Longerpage</li><li>Anotherpage</li><li>Pagetacularised</li>
+            <li>Home</li><li>Contacts</li><li>About Us</li><li>Services &amp; Dates</li><li>Clubs/Activities</li><li>Photos</li><li>Stewardship</li><li>Links</li>
           </ul>
         </div><!--Centre class end-->
       </div><!--Navigation ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
       <!--Side navigation begin--><div class="four columns" id="sidebar">
-        History
+        <p>Moo</p>
       </div><!--Side navigation ends-->
       <div class="eight columns nomargin" id="content"><!--Content begins-->
         <h4>Basic Page</h4>
