Sidebar list and paragraphs sorted
More basic layout stuff done!

--- a/index.html
+++ b/index.html
@@ -55,11 +55,20 @@
     </div><!--Row ends-->
     <div class="row"><!--New row-->
       <!--Side navigation begin--><div class="four columns" id="sidebar">
-        <p>Moo</p>
+        <ul>
+          <li>Test list</li>
+          <li>Another item but better test it wraps</li>
+          <li>Another item</li>
+          <li>Another item</li>
+        </ul>
       </div><!--Side navigation ends-->
       <div class="eight columns nomargin" id="content"><!--Content begins-->
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+
+        <img src="images/facebook.jpg" class="right" width="200" />
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div><!--Content ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
