--- a/index.html
+++ b/index.html
@@ -56,19 +56,33 @@
     <div class="row"><!--New row-->
       <!--Side navigation begin--><div class="four columns" id="sidebar">
         <ul>
-          <li>Test list</li>
-          <li>Another item but better test it wraps</li>
-          <li>Another item</li>
-          <li>Another item</li>
+          <li class="list-title">Services Update</li>
+          <li>Next Family Service<br />
+              Sunday 4th September 2016 at 9.30 am<br />
+              (Pet thanksgiving service)</li>
+          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
+          <li class="list-title">Other Dates</li>
+          <li>Julian Meetings in Church,<br />
+          first Wednesday of the month 7:30 - 8:10 pm</li>
+          <li class="list-title">Social Events</li>
+          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
+          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
         </ul>
       </div><!--Side navigation ends-->
       <div class="eight columns nomargin" id="content"><!--Content begins-->
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
 
-        <img src="images/facebook.jpg" class="right" width="200" />
+        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
+        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
+
+        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
+        Our Uniformed Organisations attend this service.</p>
+
+        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
+
+        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
       </div><!--Content ends-->
     </div><!--Row ends-->
     <div class="row"><!--New row-->
