Column conundrum fix
Conditional jQuery that runs on larger screens only, copied from online
article and modified, see my notes!

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
   <link rel="stylesheet" href="css/skeleton.css"><!-- framework CSS -->
   <link rel="stylesheet" href="css/style.css"><!--my additions-->
 
+  <!-- JavaScript
+  __________________________________________________ -->
+
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -88,7 +93,7 @@
 
     <!--Row begins--><div class="row">
 
-      <!--Side navigation/info begin #side--><div class="four columns" id="sidebar">
+      <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
         <ul>
           <li class="list-title">Services Update</li>
           <li>Next Family Service<br />
@@ -104,7 +109,7 @@
         </ul>
       </div><!--Side navigation/info ends-->
 
-      <!--Content begins #content--><div class="eight columns nomargin" id="content">
+      <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
         <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
 
         <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
@@ -138,6 +143,53 @@
 
 
   </div><!--Container ends-->
+
+  <!--Script to make content and sidebar same height no matter what!--><script>
+    // placing objects inside variables
+
+    //#added the below if statement to make sure this doesn't run on mobile
+
+    if ($(window).width() > 550){
+      var content = $('#contentBox');
+      var sidebar = $('#sidebarBox');
+      var count = 0;
+      var myTimer;
+
+      function setEqualContainer() {
+      	// get content and sidebar height in variables
+      	var getContentHeight = content.outerHeight();
+      	var getSidebarHeight = sidebar.outerHeight();
+
+      	// check if content height is bigger than sidebar
+      	if ( getContentHeight > getSidebarHeight ) {
+      		sidebar.css('min-height', getContentHeight);
+      	}
+
+      	// check if sidebar height is bigger than content
+      	if ( getSidebarHeight > getContentHeight ) {
+      		content.css('min-height', getSidebarHeight);
+      	}
+      }
+
+      // creating the timer which will run every 500 milliseconds
+      // and will stop after the container will be loaded
+      // ...or after 15 seconds to not eat a lot of memory
+      myTimer = setInterval( function() {
+      	count++;
+
+      	if ( $('.testContainer').length == 0 ) {
+      		setEqualContainer();
+      	} else {
+      		setEqualContainer();
+      		clearInterval(myTimer);
+      	}
+
+      	if ( count == 15) {
+      		clearInterval(myTimer);
+      	}
+      }, 500);
+    }
+  </script>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
