--- a/contacts/index.html
+++ b/contacts/index.html
@@ -31,9 +31,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css"><!-- reset file do not change -->
-  <link rel="stylesheet" href="css/skeleton.css"><!-- framework CSS -->
-  <link rel="stylesheet" href="css/style.css"><!--my additions-->
+  <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
+  <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
+  <link rel="stylesheet" href="../css/style.css"><!--my additions-->
 
   <!-- JavaScript
   __________________________________________________ -->
@@ -42,7 +42,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="../images/favicon.png">
 
 </head>
 <body>
@@ -54,10 +54,10 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="sitemap.html">Sitemap</a></li>
-          <li><a href="docs/PewSheet.pdf">Current Pew Sheet</a></li>
-          <li><a href=""><img src="images/diocese.png" /></a></li>
-          <li><a href="docs/AEDnotice.pdf"><img src="images/aed.jpg" /></a></li>
+          <li><a href="../sitemap.html">Sitemap</a></li>
+          <li><a href="../docs/PewSheet.pdf">Current Pew Sheet</a></li>
+          <li><a href=""><img src="../images/diocese.png" /></a></li>
+          <li><a href="../docs/AEDnotice.pdf"><img src="../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
 
@@ -68,7 +68,7 @@
 
       <!--Header begin--><div class="twelve columns" id="header">
         <div class="two columns" id="top-shield">
-          <img src="images/shield.png" />
+          <img src="../images/shield.png" />
         </div>
 
         <div class="eight columns">
@@ -76,7 +76,7 @@
         </div>
 
         <div class="two columns" id="top-cofe">
-          <img src="images/cofe.png" />
+          <img src="../images/cofe.png" />
         </div>
       </div><!--Header ends-->
 
@@ -94,7 +94,7 @@
         </div>
         <!--Navigation links begin #nav--><div class="centre">
           <ul>
-            <li><a href="#">Home</a></li><li><a href="contacts">Contacts</a></li><li><a href="about">About Us</a></li><li><a href="services">Services &amp; Dates</a></li><li><a href="clubs">Clubs/Activities</a></li><li><a href="photos">Photos</a></li><li><a href="stewardship">Stewardship</a></li><li><a href="links">Links</a></li>
+            <li><a href="../">Home</a></li><li><a href="../contacts">Contacts</a></li><li><a href="../about">About Us</a></li><li><a href="../services">Services &amp; Dates</a></li><li><a href="../clubs">Clubs/Activities</a></li><li><a href="../photos">Photos</a></li><li><a href="../stewardship">Stewardship</a></li><li><a href="../links">Links</a></li>
           </ul>
         </div><!--Navigation links end-->
       </div><!--Navigation area ends-->
@@ -104,40 +104,26 @@
 
     <!--Row begins--><div class="row">
 
-      <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
-              Sunday 4th September 2016 at 9.30 am<br />
-              (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
-          <li>Julian Meetings in Church,<br />
-          first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
-        </ul>
-      </div><!--Side navigation/info ends-->
+      <!--Content begins #content--><div class="twelve columns" id="content">
+      <table id="contactsTable" summary="St. Andrew's Church list of contacts">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Contact</th>
+            <th scope="col">Telephone</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Vicar</th>
+            <th scope="row">Rev'd Gary Ingram<br />
+            19 Grange Park, Ferring</th>
+            <th scope="row">W 241645</th>
+          </tr>
 
-      <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
-        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
+        </tbody>
+      </table>
 
-        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
-        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
-
-        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
-
-        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
-        Our Uniformed Organisations attend this service.</p>
-
-        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
-
-        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
-
-        <!--CofE JavaScript for news box #cofe-->
-        <script type="text/javascript" src="http://www.churchofengland.org/cofe-rss.js?feed=news&amp;n=3&amp;showdescription=0"></script>
-        <noscript><h2 class="cofe-rss-alternate-content"><a href="http://www.churchofengland.org/news/">News from the Church of England</a></h2></noscript>
       </div><!--Content ends-->
 
     </div><!--Row ends-->
