--- a/stewardship/index.html
+++ b/stewardship/index.html
@@ -31,9 +31,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css"><!-- reset file do not change -->
-  <link rel="stylesheet" href="css/skeleton.css"><!-- framework CSS -->
-  <link rel="stylesheet" href="css/style.css"><!--my additions-->
+  <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
+  <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
+  <link rel="stylesheet" href="../css/style.css"><!--my additions-->
 
   <!-- JavaScript
   __________________________________________________ -->
@@ -42,7 +42,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="../images/favicon.png">
 
 </head>
 <body>
@@ -54,10 +54,10 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="sitemap.html">Sitemap</a></li>
-          <li><a href="docs/PewSheet.pdf">Current Pew Sheet</a></li>
-          <li><a href=""><img src="images/diocese.png" /></a></li>
-          <li><a href="docs/AEDnotice.pdf"><img src="images/aed.jpg" /></a></li>
+          <li><a href="../sitemap.html">Sitemap</a></li>
+          <li><a href="../docs/PewSheet.pdf">Current Pew Sheet</a></li>
+          <li><a href=""><img src="../images/diocese.png" /></a></li>
+          <li><a href="../docs/AEDnotice.pdf"><img src="../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
 
@@ -68,7 +68,7 @@
 
       <!--Header begin--><div class="twelve columns" id="header">
         <div class="two columns" id="top-shield">
-          <img src="images/shield.png" />
+          <img src="../images/shield.png" />
         </div>
 
         <div class="eight columns">
@@ -76,7 +76,7 @@
         </div>
 
         <div class="two columns" id="top-cofe">
-          <img src="images/cofe.png" />
+          <img src="../images/cofe.png" />
         </div>
       </div><!--Header ends-->
 
@@ -94,7 +94,7 @@
         </div>
         <!--Navigation links begin #nav--><div class="centre">
           <ul>
-            <li><a href="#">Home</a></li><li><a href="contacts">Contacts</a></li><li><a href="about">About Us</a></li><li><a href="services">Services &amp; Dates</a></li><li><a href="clubs">Clubs/Activities</a></li><li><a href="photos">Photos</a></li><li><a href="stewardship">Stewardship</a></li><li><a href="links">Links</a></li>
+            <li><a href="../">Home</a></li><li><a href="../contacts">Contacts</a></li><li><a href="../about">About Us</a></li><li><a href="../services">Services &amp; Dates</a></li><li><a href="../clubs">Clubs/Activities</a></li><li><a href="../photos">Photos</a></li><li><a href="../stewardship">Stewardship</a></li><li><a href="../links">Links</a></li>
           </ul>
         </div><!--Navigation links end-->
       </div><!--Navigation area ends-->
