--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
+  <title>St. Andrew's Church Ferring - About Us</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -105,39 +105,47 @@
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
-              Sunday 4th September 2016 at 9.30 am<br />
-              (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
-          <li>Julian Meetings in Church,<br />
-          first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
+        <ul id="sidebarLinks">
+          <li><a href="">Who's Who</a></li>
+          <li><a href="">Where To Find<br />St. Andrew's</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Priests at<br />St. Andrew's</a></li>
+          <li><a href="">Churchwardens at<br />St Andrew's</a></li>
         </ul>
       </div><!--Side navigation/info ends-->
 
       <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
-        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
 
-        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
-        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
+        <h1 class="title">Who's Who</h1>
+        <div class="five columns">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns offset-by-one">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns offset-by-one">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns offset-by-one">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
+        <div class="five columns">
+          <img src="" alt="Picture of Rev. Gary Ingram" width="150" />
+          <p>Reverend Gary Ingram, Vicar</p>
+        </div>
 
-        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
-
-        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
-        Our Uniformed Organisations attend this service.</p>
-
-        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
-
-        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
-
-        <!--CofE JavaScript for news box #cofe-->
-        <script type="text/javascript" src="http://www.churchofengland.org/cofe-rss.js?feed=news&amp;n=3&amp;showdescription=0"></script>
-        <noscript><h2 class="cofe-rss-alternate-content"><a href="http://www.churchofengland.org/news/">News from the Church of England</a></h2></noscript>
       </div><!--Content ends-->
 
     </div><!--Row ends-->
