--- a/about/history/index.html
+++ b/about/history/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring - About Us</title>
+  <title>St. Andrew's Church Ferring - History</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -19,9 +19,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
-  <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
-  <link rel="stylesheet" href="../css/style.css"><!--my additions-->
+  <link rel="stylesheet" href="../../css/normalize.css"><!-- reset file do not change -->
+  <link rel="stylesheet" href="../../css/skeleton.css"><!-- framework CSS -->
+  <link rel="stylesheet" href="../../css/style.css"><!--my additions-->
 
   <!-- JavaScript
   __________________________________________________ -->
@@ -30,7 +30,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
 
 </head>
 <body>
@@ -42,10 +42,10 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="../sitemap.html">Sitemap</a></li>
-          <li><a href="../docs/PewSheet.pdf">Current Pew Sheet</a></li>
-          <li><a href=""><img src="../images/diocese.png" /></a></li>
-          <li><a href="../docs/AEDnotice.pdf"><img src="../images/aed.jpg" /></a></li>
+          <li><a href="../../sitemap.html">Sitemap</a></li>
+          <li><a href="../../docs/PewSheet.pdf">Current Pew Sheet</a></li>
+          <li><a href=""><img src="../../images/diocese.png" /></a></li>
+          <li><a href="../../docs/AEDnotice.pdf"><img src="../../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
 
@@ -56,7 +56,7 @@
 
       <!--Header begin--><div class="twelve columns" id="header">
         <div class="two columns" id="top-shield">
-          <img src="../images/shield.png" />
+          <img src="../../images/shield.png" />
         </div>
 
         <div class="eight columns">
@@ -64,7 +64,7 @@
         </div>
 
         <div class="two columns" id="top-cofe">
-          <img src="../images/cofe.png" />
+          <img src="../../images/cofe.png" />
         </div>
       </div><!--Header ends-->
 
@@ -82,7 +82,7 @@
         </div>
         <!--Navigation links begin #nav--><div class="centre">
           <ul>
-            <li><a href="../">Home</a></li><li><a href="../contacts">Contacts</a></li><li><a href="../about">About Us</a></li><li><a href="../services">Services &amp; Dates</a></li><li><a href="../clubs">Clubs/Activities</a></li><li><a href="../photos">Photos</a></li><li><a href="../stewardship">Stewardship</a></li><li><a href="../links">Links</a></li>
+            <li><a href="../../">Home</a></li><li><a href="../../contacts">Contacts</a></li><li><a href="../../about">About Us</a></li><li><a href="../../services">Services &amp; Dates</a></li><li><a href="../../clubs">Clubs/Activities</a></li><li><a href="../../photos">Photos</a></li><li><a href="../../stewardship">Stewardship</a></li><li><a href="../../links">Links</a></li>
           </ul>
         </div><!--Navigation links end-->
       </div><!--Navigation area ends-->
@@ -94,48 +94,37 @@
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
         <ul id="sidebarLinks">
-          <li><a href="">Who's Who</a></li>
+          <li><a href="../">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
-          <li><a href="history">History</a></li>
-          <li><a href="priests">Priests at<br />St. Andrew's</a></li>
-          <li><a href="wardens">Churchwardens at<br />St Andrew's</a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="../priests">Priests at<br />St. Andrew's</a></li>
+          <li><a href="../wardens">Churchwardens at<br />St Andrew's</a></li>
         </ul>
       </div><!--Side navigation/info ends-->
 
       <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
 
-        <h1 class="title">Who's Who</h1>
+        <h1 class="title">History of St. Andrew's</h1>
 
-        <!--Who's Who images begin #whoswho--><div id="whoswhoBox">
+        <p>St Andrew’s Church stands on a low hill in the heart of the old part of Ferring Village amongst some of the oldest cottages in the village.</p>
 
-          <div class="five columns fix">
-            <img src="../images/whoswho-gary.jpg" alt="Picture of Rev. Gary Ingram" />
-            <p>Reverend Gary Ingram, Vicar</p>
-          </div>
-          <div class="five columns offset-by-one">
-            <img src="../images/whoswho-jill.jpg" alt="Picture of Reverend Jill Simpson" />
-            <p>Reverend Jill Simpson, Curate</p>
-          </div>
-          <div class="five columns">
-            <img src="../images/whoswho-paul.jpg" alt="Picture of Canon Paul Simmonds" />
-            <p>Canon Paul Simmonds</p>
-          </div>
-          <div class="five columns offset-by-one">
-            <img src="../images/whoswho-gail.jpg" alt="Picture of Gail Holly" />
-            <p>Gail Holly, Churchwarden</p>
-          </div>
-          <div class="five columns">
-            <img src="../images/whoswho-john.jpg" alt="Picture of John Soper" />
-            <p>John Soper, Churchwarden</p>
-          </div>
-          <div class="five columns offset-by-one">
-            <img src="../images/whoswho-susan.jpg" alt="Picture of Susan Maund" />
-            <p>Susan Maund, PCC Secretary</p>
-          </div>
-          <div class="five columns u-cf">
-            <img src="../images/whoswho-alan.jpg" alt="Picture of Alan Plummer" />
-            <p>Alan Plummer, PCC Treasurer</p>
-          </div>
+        <img src="" alt="" width="500" height="150" />
+
+        <p>Ferring is probably one of the oldest churches in Sussex. At the time of the Doomsday Survey, the 'demesne of ferringes' had two ploughs, while 15 villeins and 14 bordars had five ploughs (a plough being a measure of the arable land which could be worked by a plough with a team of eight oxen).</p>
+
+        <p>The first church of St Andrew in Ferring was built between 765 and 791. With it was associated the endowment of land which became the basis of Ferring Manor, an episcopal property of the see of Selsey. Together, church and manor were established as the centre of village life well before the Norman Conquest.</p>
+
+        <p>The existing building was started in about 1120 on the site of the original church. The west wall and south wall in the Nave date back to this time. The church was enlarged in 1250, when the chancel was built and the northern side extended.</p>
+
+        <p>It has been suggested that, centuries ago, the current porch formed the base of a tower, a possibility which might account for the blocked-up doorway seen on the inner side of the east wall.</p>
+
+        <p>The church has seen Ferring grow from a small hamlet of under a hundred souls to the present active and successful community of just under five thousand.</p>
+
+        <p>All this time the church has helped the people of Ferring in good and difficult times.</p>
+
+        <p>Our church guide book, with further information on St Andrew's and the village of Ferring, is being revised for a new edition.</p>
+
+        <p>But for more on the history of the church please see <a href="http://www.ferringhistorygroup.co.uk/st-andrews-church-the-first-1250-years/">our page on Ferring History Group</a>.</p>
 
         </div>
 
