About Us pages done, Services as well
Also sorted some CSS stuff, got images to resize with new class etc

--- a/about/index.html
+++ b/about/index.html
@@ -94,6 +94,7 @@
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
         <ul id="sidebarLinks">
+          <h3 class="title">About Us</h3>
           <li><a href="">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
           <li><a href="history">History</a></li>
