--- a/contacts/index.html
+++ b/contacts/index.html
@@ -110,7 +110,7 @@
 
       <h1 class="title">Contacts</h1>
 
-      <table id="contactsTable" summary="St. Andrew's Church list of contacts">
+      <table id="table" summary="St. Andrew's Church list of contacts">
         <thead>
           <tr>
             <th scope="col"></th>
