--- a/about/priests/index.html
+++ b/about/priests/index.html
@@ -5,17 +5,13 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring - History</title>
+  <title>St. Andrew's Church Ferring - Priests at St. Andrew's</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -97,38 +93,196 @@
           <h3 class="title">About Us</h3>
           <li><a href="../">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
-          <li><a href="#">History</a></li>
-          <li><a href="../priests">Priests at<br />St. Andrew's</a></li>
+          <li><a href="../history">History</a></li>
+          <li><a href="#">Priests at<br />St. Andrew's</a></li>
           <li><a href="../wardens">Churchwardens at<br />St Andrew's</a></li>
         </ul>
       </div><!--Side navigation/info ends-->
 
       <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
 
-        <h1 class="title">History of St. Andrew's</h1>
+        <h1 class="title">Priests at St. Andrew's</h1>
 
-        <p>St Andrew’s Church stands on a low hill in the heart of the old part of Ferring Village amongst some of the oldest cottages in the village.</p>
+        <table id="table" summary="St. Andrew's Church list of contacts">
+          <thead>
+            <tr>
+              <th scope="col">Year</th>
+              <th scope="col">Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row">Circa 1250</td>
+              <td scope="row">Simon</td>
+            </tr>
+            <tr>
+              <td scope="row">1403</td>
+              <td scope="row">William Blunteshaw</td>
+            </tr>
+            <tr>
+              <td scope="row">1407</td>
+              <td scope="row">John de Eolith</td>
+            </tr>
+            <tr>
+              <td scope="row">1407</td>
+              <td scope="row">Thomas Breton</td>
+            </tr>
+            <tr>
+              <td scope="row">1411</td>
+              <td scope="row">Thomas atte Woode</td>
+            </tr>
+            <tr>
+              <td scope="row">1415</td>
+              <td scope="row">Thomas Wylenale</td>
+            </tr>
+            <tr>
+              <td scope="row">1439</td>
+              <td scope="row">Richard Fyge</td>
+            </tr>
+            <tr>
+              <td scope="row">1532</td>
+              <td scope="row">John Brestall</td>
+            </tr>
+            <tr>
+              <td scope="row">1532</td>
+              <td scope="row">George Lees</td>
+            </tr>
+            <tr>
+              <td scope="row">1556</td>
+              <td scope="row">George Fayrebank</td>
+            </tr>
+            <tr>
+              <td scope="row">1558</td>
+              <td scope="row">John Lawe</td>
+            </tr>
+            <tr>
+              <td scope="row">1563</td>
+              <td scope="row">John Godman</td>
+            </tr>
+            <tr>
+              <td scope="row">1578</td>
+              <td scope="row">George Watersfield</td>
+            </tr>
+            <tr>
+              <td scope="row">1599</td>
+              <td scope="row">Peter Walters</td>
+            </tr>
+            <tr>
+              <td scope="row">1606</td>
+              <td scope="row">John Bell</td>
+            </tr>
+            <tr>
+              <td scope="row">1611</td>
+              <td scope="row">Jeffrey More</td>
+            </tr>
+            <tr>
+              <td scope="row">1632</td>
+              <td scope="row">Arthur Owen</td>
+            </tr>
+            <tr>
+              <td scope="row">1655</td>
+              <td scope="row">Nicholas Shepherd&#42;</td>
+            </tr>
+            <tr>
+              <td scope="row">1656</td>
+              <td scope="row">Richard Meggs&#42;</td>
+            </tr>
+            <tr>
+              <td scope="row">1658</td>
+              <td scope="row">Edward Bushwell&#42;</td>
+            </tr>
+            <tr>
+              <td scope="row">1659</td>
+              <td scope="row">John Crufts</td>
+            </tr>
+            <tr>
+              <td scope="row">1661</td>
+              <td scope="row">Steven Worger</td>
+            </tr>
+            <tr>
+              <td scope="row">1666</td>
+              <td scope="row">Charles Cutter</td>
+            </tr>
+            <tr>
+              <td scope="row">1716</td>
+              <td scope="row">William Albright</td>
+            </tr>
+            <tr>
+              <td scope="row">1766</td>
+              <td scope="row">James Penfold</td>
+            </tr>
+            <tr>
+              <td scope="row">1812</td>
+              <td scope="row">Francis Whitcombe</td>
+            </tr>
+            <tr>
+              <td scope="row">1832</td>
+              <td scope="row">Henry Dixon, R.D.</td>
+            </tr>
+            <tr>
+              <td scope="row">1870</td>
+              <td scope="row">Gregory Walter Pennithorne, R.D.</td>
+            </tr>
+            <tr>
+              <td scope="row">1886</td>
+              <td scope="row">Robert Blight</td>
+            </tr>
+            <tr>
+              <td scope="row">1888</td>
+              <td scope="row">Arthur Mackreth Deane, R.D.</td>
+            </tr>
+            <tr>
+              <td scope="row">1918</td>
+              <td scope="row">Hector William Grepe</td>
+            </tr>
+            <tr>
+              <td scope="row">1924</td>
+              <td scope="row">Thomas Harry Lee Jellicoe</td>
+            </tr>
+            <tr>
+              <td scope="row">1927</td>
+              <td scope="row">Stuart M. Morgan</td>
+            </tr>
+            <tr>
+              <td scope="row">1934</td>
+              <td scope="row">H. Copley Moyle</td>
+            </tr>
+            <tr>
+              <td scope="row">1945</td>
+              <td scope="row">Joseph Wilfred Reeves, R.D.</td>
+            </tr>
+            <tr>
+              <td scope="row">1973</td>
+              <td scope="row">Rex Douglas Trevor Paterson</td>
+            </tr>
+            <tr>
+              <td scope="row">1996</td>
+              <td scope="row">Keith McNicol</td>
+            </tr>
+            <tr>
+              <td scope="row">2001</td>
+              <td scope="row">Terry Stratford</td>
+            </tr>
+            <tr>
+              <td scope="row">2009</td>
+              <td scope="row">Gary Simon Ingram (Priest in Charge)</td>
+            </tr>
+            <tr>
+              <td scope="row">2011</td>
+              <td scope="row">Gary Simon Ingram (Vicar)</td>
+            </tr>
+            <!--
 
-        <img src="../../images/church-gate-ls.jpg" alt="" class="fluid" />
-
-        <p>Ferring is probably one of the oldest churches in Sussex. At the time of the Doomsday Survey, the 'demesne of ferringes' had two ploughs, while 15 villeins and 14 bordars had five ploughs (a plough being a measure of the arable land which could be worked by a plough with a team of eight oxen).</p>
 
 
-        <p>The first church of St Andrew in Ferring was built between 765 and 791. With it was associated the endowment of land which became the basis of Ferring Manor, an episcopal property of the see of Selsey. Together, church and manor were established as the centre of village life well before the Norman Conquest.</p>
 
-        <img src="../../images/church-altar-01.jpg" alt="" class="fluid left" />
-          <p>The existing building was started in about 1120 on the site of the original church. The west wall and south wall in the Nave date back to this time. The church was enlarged in 1250, when the chancel was built and the northern side extended.</p>
 
-        <p>It has been suggested that, centuries ago, the current porch formed the base of a tower, a possibility which might account for the blocked-up doorway seen on the inner side of the east wall.</p>
+*
+*	2011	Gary Simon Ingram  (Vicar)-->
+          </tbody>
+        </table>
 
-        <p>The church has seen Ferring grow from a small hamlet of under a hundred souls to the present active and successful community of just under five thousand.</p>
-          <img src="../../images/church-entrance-250.jpg" alt="" class="fluid right" />
-
-        <p>All this time the church has helped the people of Ferring in good and difficult times.</p>
-
-        <p>Our church guide book, with further information on St Andrew's and the village of Ferring, is being revised for a new edition.</p>
-
-        <p>But for more on the history of the church please see <a href="http://www.ferringhistorygroup.co.uk/st-andrews-church-the-first-1250-years/">our page on Ferring History Group</a>.</p>
+        <p>&#42;Preachers of the Gospel</p>
 
         </div>
 
