--- a/services/index.html
+++ b/services/index.html
@@ -17,7 +17,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
+  <title>St. Andrew's Church Ferring - Services & Dates</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -104,40 +104,63 @@
 
     <!--Row begins--><div class="row">
 
-      <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
-              Sunday 4th September 2016 at 9.30 am<br />
-              (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
-          <li>Julian Meetings in Church,<br />
-          first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
-        </ul>
-      </div><!--Side navigation/info ends-->
 
-      <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
-        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
 
-        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
-        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
+      <!--Content begins #content--><div class="twelve columns" id="content">
 
-        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
+      <h1 class="title">Services &amp; Dates 2016</h1>
 
-        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
-        Our Uniformed Organisations attend this service.</p>
+      <table id="table" summary="St. Andrew's Church list of regular dates">
+        <thead>
+          <tr>
+            <th scope="col">Sundays</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row">8:00</td>
+            <td scope="row">Holy Communion</td>
+          </tr>
+          <tr>
+            <td scope="row">9:30</td>
+            <td scope="row">Family Service</td>
+            <td scope="row">1st Sunday in month</td>
+          </tr>
+          <tr>
+            <td scope="row"></td>
+            <td scope="row">&amp; Pet Thanksgiving Service</td>
+            <!--#pets--><td scope="row">Next: 4th September</td>
+          </tr>
+          <tr>
+            <td scope="row">9:30</td>
+            <td scope="row">Parish Communion</td>
+            <td scope="row">2nd, 3rd and 4th Sunday in month</td>
+          </tr>
+          <tr>
+            <td scope="row">11:00</td>
+            <td scope="row">Matins,
+              with BCP Holy Communion</td>
+            <td scope="row">1st Sunday in month</td>
+          </tr>
+        </tbody>
+        <thead>
+          <tr>
+            <th scope="col">Wednesdays</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row">8:00</td>
+            <td scope="row">Holy Communion</td>
+          </tr>
+          <tr>
+            <td scope="row">7:30-8:10 p.m.</td>
+            <td scope="row">Julian Meetings in Church</td>
+            <td scope="row">1st Wednesday in month</td>
+          </tr>
+        </tbody>
+      </table>
 
-        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
-
-        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
-
-        <!--CofE JavaScript for news box #cofe-->
-        <script type="text/javascript" src="http://www.churchofengland.org/cofe-rss.js?feed=news&amp;n=3&amp;showdescription=0"></script>
-        <noscript><h2 class="cofe-rss-alternate-content"><a href="http://www.churchofengland.org/news/">News from the Church of England</a></h2></noscript>
       </div><!--Content ends-->
 
     </div><!--Row ends-->
@@ -155,52 +178,27 @@
 
   </div><!--Container ends-->
 
-  <!--Script to make content and sidebar same height no matter what!--><script>
-    // placing objects inside variables
+  <!--fix for mobile table layout--><script>
+    var headertext = [];
+    var headers = document.querySelectorAll("thead");
+    var tablebody = document.querySelectorAll("tbody");
 
-    //#added the below if statement to make sure this doesn't run on mobile
-
-    if ($(window).width() > 550){
-      var content = $('#contentBox');
-      var sidebar = $('#sidebarBox');
-      var count = 0;
-      var myTimer;
-
-      function setEqualContainer() {
-      	// get content and sidebar height in variables
-      	var getContentHeight = content.outerHeight();
-      	var getSidebarHeight = sidebar.outerHeight();
-
-      	// check if content height is bigger than sidebar
-      	if ( getContentHeight > getSidebarHeight ) {
-      		sidebar.css('min-height', getContentHeight);
-      	}
-
-      	// check if sidebar height is bigger than content
-      	if ( getSidebarHeight > getContentHeight ) {
-      		content.css('min-height', getSidebarHeight);
-      	}
-      }
-
-      // creating the timer which will run every 500 milliseconds
-      // and will stop after the container will be loaded
-      // ...or after 15 seconds to not eat a lot of memory
-      myTimer = setInterval( function() {
-      	count++;
-
-      	if ( $('.testContainer').length == 0 ) {
-      		setEqualContainer();
-      	} else {
-      		setEqualContainer();
-      		clearInterval(myTimer);
-      	}
-
-      	if ( count == 15) {
-      		clearInterval(myTimer);
-      	}
-      }, 500);
+    for (var i = 0; i < headers.length; i++) {
+    	headertext[i]=[];
+    	for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
+    	  var current = headrow;
+    	  headertext[i].push(current.textContent);
+    	  }
     }
-  </script>
+
+    for (var h = 0, tbody; tbody = tablebody[h]; h++) {
+    	for (var i = 0, row; row = tbody.rows[i]; i++) {
+    	  for (var j = 0, col; col = row.cells[j]; j++) {
+    	    col.setAttribute("data-th", headertext[h][j]);
+    	  }
+    	}
+    }
+  </script><!--end of fix script-->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
