Links page started

--- a/stewardship/index.html
+++ b/stewardship/index.html
@@ -17,7 +17,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
+  <title>St. Andrew's Church Ferring - Stewardship</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
