--- a/links/index.html
+++ b/links/index.html
@@ -17,7 +17,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
+  <title>St. Andrew's Church Ferring - Links</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -104,41 +104,165 @@
 
     <!--Row begins--><div class="row">
 
-      <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
-              Sunday 4th September 2016 at 9.30 am<br />
-              (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
-          <li>Julian Meetings in Church,<br />
-          first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
-        </ul>
-      </div><!--Side navigation/info ends-->
+      <!--Content begins #content--><div class="twelve columns" id="content">
+        <h1 class="title">Links</h1>
 
-      <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
-        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
+        <table id="tableBig" summary="St. Andrew's Church links list">
+          <thead>
+            <tr>
+              <th scope="col">Church</th>
+              <th scope="col">&nbsp;</th>
+              <th scope="col">Village/Worthing/International</th>
+              <th scope="col">&nbsp;</th>
+            </tr>
+          </thead>
+          <tbody>
 
-        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
-        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
+            <tr>
+              <td scope="row" class="link-logo"><img src="../images/link-fb.jpg" class="link"></td>
+              <td scope="row" class="link"><a href="http://www.facebook.com/standrewsferring">St Andrew's Facebook page</a></td>
+            </tr>
 
-        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
+          </tbody>
+        </table>
 
-        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
-        Our Uniformed Organisations attend this service.</p>
+        <!--
 
-        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
+           <tr>
 
-        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
+             <td height="46" width="20%" valign="middle">
+                 <a target="_blank" href="http://www.facebook.com/standrewsferring">
+                 <font size="2">St Andrew&#39;s Facebook page</font></a></td>
+           <td align="right" height="46" width="10%">&nbsp;</td>
 
-        <!--CofE JavaScript for news box #cofe-->
-        <script type="text/javascript" src="http://www.churchofengland.org/cofe-rss.js?feed=news&amp;n=3&amp;showdescription=0"></script>
-        <noscript><h2 class="cofe-rss-alternate-content"><a href="http://www.churchofengland.org/news/">News from the Church of England</a></h2></noscript>
-      </div><!--Content ends-->
+             <td align="center" height="46" width="15%"><br>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <a target="_blank" title="Ferring Parish Council Website" href="http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=1235">
+             <img border="0" src="Images/parish.jpg" width="61" height="60"></a>&nbsp;&nbsp;&nbsp; </td>
+
+             <td align="left" height="46" width="15%"><a target="_blank" title="Ferring Parish Council Website" href="http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=1235">Ferring
+             Parish Council</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+           <td align="right" height="46" width="15%">&nbsp;</td>
+           </tr>
+           <tr>
+             <td align="right" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="10%" valign="middle">
+                 <a target="_blank" title="Church of England Website" href="http://www.churchofengland.org">
+                 <img border="0" src="Images/coebelowright.jpg" width="86" height="67"></a><br>&nbsp;</td>
+             <td height="46" width="20%" valign="middle">
+                 <a target="_blank"  href="http://www.churchofengland.org">Church Of England's New
+                 Website</a></td>
+           <td align="right" height="46" width="10%">&nbsp;</td>
+
+             <td align="center" height="46" width="15%"><br>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <a target="_blank" title="Ferring Village Website" href="http://www.ferringvillage.co.uk/">
+             <img border="0" src="Images/village.jpg" width="70" height="60"></a>&nbsp;&nbsp;&nbsp;&nbsp; </td>
+
+             <td align="left" height="46" width="15%"><a target="_blank" title="Ferring Village Website" href="http://www.ferringvillage.co.uk/">Ferring
+             Village Website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+           <td align="right" height="46" width="15%"></td>
+           </tr>
+           <tr>
+             <td align="center" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="10%" valign="middle">
+                <a target="_blank" title="Chichester Diocese Website" href="http://www.chichester.anglican.org">
+                <img border="0" src="Images/arms.jpg" width="51" height="63"></a><br>
+&nbsp;</td>
+             <td height="46" width="20%" valign="middle">
+                <a target="_blank" title="Chichester Diocese Website" href="http://www.chichester.anglican.org">Chichester Diocese</a></td>
+            <td align="right" height="46" width="10%">&nbsp;</td>
+
+            <td align="center" height="46" width="15%">
+            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.new-wine.org/home">
+            <img border="0" src="Images/newwine.jpg" width="153" height="66"></a></td>
+
+            <td align="left" height="46" width="15%">
+            <a href="https://www.new-wine.org/" target="_blank">New
+            Wine</a></td>
+            <td align="right" height="46" width="15%"></td>
+
+           </tr>
+           <tr>
+             <td align="center" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="10%" valign="middle">
+                   <a target="_blank" title="Chichester Cathedral Website" href="http://www.chichestercathedral.org.uk">
+                   <img border="0" src="Images/Cathedral.jpg" width="50" height="58"></a><br>&nbsp;</td>
+             <td height="46" width="20%" valign="middle">
+                   <a target="_blank" title="Chichester Cathedral Website" href="http://www.chichestercathedral.org.uk">Chichester Cathedral</a></td>
+            <td align="right" height="46" width="10%">&nbsp;</td>
+            <td align="center" height="46" width="15%">
+            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.bigchurchdayout.com">
+            <img border="0" src="Images/bcdo.jpg" width="82" height="94"></a></td>
+            <td align="left" height="46" width="15%">
+            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.bigchurchdayout.com">Big Church Day Out</a></td>
+            <td align="right" height="46" width="15%"></td>
+           </tr>
+           <tr>
+             <td align="center" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="10%" valign="middle">
+             &nbsp;<a target="_blank" title="Chichester Cursillo"  href="http://www.chichestercursillo.co.uk"><img border="0" src="Images/new_logo_small.jpg" width="41" height="69"></a><p>&nbsp;</td>
+             <td height="46" width="20%" valign="middle">
+             <a target="_blank" title="Chichester Cursillo"  href="http://www.chichestercursillo.co.uk">Chichester Cursillo</a></td>
+            <td align="right" height="46" width="10%">&nbsp;</td>
+            <td align="center" height="46" width="15%"><br>
+             <a target="_blank" title="Worthing Churches Website"  href="http://www.worthingchurches.org.uk">
+            <img border="0" src="Images/wortingchurches.jpg" width="130" height="38"></a></td>
+            <td align="left" height="46" width="15%"><a target="_blank" title="Worthing Churches Website"  href="http://www.worthingchurches.org.uk">Worthing Churches</a></td>
+            <td align="right" height="46" width="15%">&nbsp;</td>
+            </tr>
+           <tr>
+             <td align="center" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="10%" valign="middle">
+             <a target="_blank" title="Find A Church Near You"  href="http://www.achurchnearyou.com">
+             <img border="0" src="Images/coebelowright.jpg" width="77" height="60">
+             &nbsp;</a></td>
+             <td height="46" width="20%" valign="middle">
+             <a target="_blank" title="Find A Church Near You"  href="http://www.achurchnearyou.com">
+             A Church Near You</a></td>
+            <td align="right" height="46" width="10%">&nbsp;</td>
+            <td align="center" height="46" width="15%">
+            <br>
+            <a target="_blank" title="Sussex Historic Churches Trust"  href="http://www.sussexhistoricchurches.org.uk">
+            <img border="0" src="Images/shct.jpg" width="77" height="64"></a></td>
+            <td align="left" height="46" width="15%">
+            <a target="_blank" title="Sussex Historic Churches Trust"  href="http://www.sussexhistoricchurches.org.uk">Sussex Historic Churches Trust</a></td>
+            <td align="right" height="46" width="15%"></td>
+            </tr>
+           <tr>
+             <td align="center" height="46" width="15%">&nbsp;</td>
+             <td align="center" height="46" width="7%" valign="top"><p>
+
+             <a target="_blank" title="Mystery Shopper Entry" href="http://www.ship-of-fools.com/mystery/2011/2076.html">
+             <img border="0" src="Images/mystery.jpg" width="127" height="74"></a></td>
+             <td height="46" width="23%" valign="middle">
+
+             <a target="_blank" title="Mystery Shopper Entry" href="http://www.ship-of-fools.com/mystery/2011/2076.html">
+             Our Mystery
+             Worshipper Entry</a></td>
+            <td align="right" height="46" width="10%">&nbsp;</td>
+            <td align="center" height="46" width="15%">
+             <br>
+             <a target="_blank" title="Church Care Website" href="http://www.churchcare.co.uk">
+             <img border="0" src="Images/ChurchCare.jpg" width="152" height="41"></a></td>
+            <td align="left" height="46" width="15%">
+             <a target="_blank" title="Church Care Website" href="http://www.churchcare.co.uk">Church Care</a></td>
+            <td align="right" height="46" width="15%"></td>
+            </tr>
+           <tr>
+             <td align="center" height="25" width="15%">&nbsp;</td>
+             <td align="center" height="25" width="4%" valign="middle"><img border="0" src="Images/sitelogo.png" width="118" height="71"></td>
+             <td height="25" width="26%" valign="middle">
+               <p align="left"><font size="2"><a href="http://rehab-recovery.co.uk">Rehab Recovery</a> is a free and national helpline assisting people suffering from addiction and mental health problems. You can contact
+               <a href="http://rehab-recovery.co.uk"> Rehab Recovery</a> on 0800 088 66 86</font></td>
+            <td align="right" height="25" width="10%">&nbsp;</td>
+            <td align="center" height="45" width="30%" colspan="2">
+            &nbsp;</td>
+            <td align="right" height="25" width="15%">&nbsp;</td>
+            </tr>
+          </table>-->
+
+        </div><!--Content ends-->
 
     </div><!--Row ends-->
 
@@ -154,6 +278,28 @@
 
 
   </div><!--Container ends-->
+
+  <!--fix for mobile table layout--><script>
+    var headertext = [];
+    var headers = document.querySelectorAll("thead");
+    var tablebody = document.querySelectorAll("tbody");
+
+    for (var i = 0; i < headers.length; i++) {
+    	headertext[i]=[];
+    	for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
+    	  var current = headrow;
+    	  headertext[i].push(current.textContent);
+    	  }
+    }
+
+    for (var h = 0, tbody; tbody = tablebody[h]; h++) {
+    	for (var i = 0, row; row = tbody.rows[i]; i++) {
+    	  for (var j = 0, col; col = row.cells[j]; j++) {
+    	    col.setAttribute("data-th", headertext[h][j]);
+    	  }
+    	}
+    }
+  </script><!--end of fix script-->
 
   <!--Script to make content and sidebar same height no matter what!--><script>
     // placing objects inside variables
